<resources>
    <string name="app_name">calculator</string>
    <string name="_4">4</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="left">(</string>
    <string name="_0">0</string>
    <string name="right">)</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="divide">/</string>
    <string name="equals">=</string>
    <string name="exponent">^</string>
    <string name="ce">CE</string>
    <string name="multiplication">*</string>
    <string name="answer" />
    <string name="c" />
    <string name="clear">ce</string>
    <string name="_7">7</string>
</resources>
