<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_row="0"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_column="0"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="100dp"
        android:text="TextView"
        android:textSize="46sp" />

    <LinearLayout
        android:id="@+id/simpleTableLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:context=".MainActivity">


        <Button

            android:id="@+id/Seven"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:text="@string/_7" />

        <Button
            android:id="@+id/Eight"
            android:layout_width="97dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"

            android:text="@string/_8" />

        <Button
            android:id="@+id/Nine"
            android:layout_width="97dp"
            android:layout_height="wrap_content"
            android:text="@string/_9"
            tools:layout_column="4" />

        <Button
            android:id="@+id/Divide"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:text="@string/divide" />


    </LinearLayout>
    <LinearLayout
        android:id="@+id/simleTblLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/Four"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:text="@string/_4" />

        <Button

            android:id="@+id/Five"
            android:layout_width="97dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/_5" />

        <Button
            android:id="@+id/Six"
            android:layout_width="97dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:text="@string/_6" />

        <Button
            android:id="@+id/Multiplication"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="2"
            android:text="@string/multiplication" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/simpleTblLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/One"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="2"
            android:text="@string/_1" />

        <Button
            android:id="@+id/Two"
            android:layout_width="97dp"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:text="@string/_2" />

        <Button
            android:id="@+id/Three"
            android:layout_width="97dp"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:text="@string/_3" />

        <Button
            android:id="@+id/Minus"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="3"
            android:text="@string/minus" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/C"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:text="@string/clear" />

        <Button
            android:id="@+id/Zero"
            android:layout_width="97dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="2"
            android:text="@string/_0" />

        <Button
            android:id="@+id/back"
            android:layout_width="97dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="<-" />

        <Button
            android:id="@+id/Plus"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plus" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Left"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:text="@string/left" />

        <Button
            android:id="@+id/Right"
            android:layout_width="97dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="3"
            android:text="@string/right" />

        <Button
            android:id="@+id/Exponent"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/exponent" />

        <Button
            android:id="@+id/Equals"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:text="@string/equals" />

    </LinearLayout>


</LinearLayout>


